--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,9 @@ jobs:
       - run:
         name: Deploying to App Engine
         command: gloud app deploy app.yaml
+ 
+  workflows:
+    version: 2
+    deploy_to_gcp:
+      jobs:
+        - deploy
