--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: chmode +x ./app.yaml.sh
+      - run: chmod +x ./app.yaml.sh
       - run:
           name: Copy across app.yml config
           command: ./app.yaml.sh > ./app.yaml
