fix config.yml x4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  gcp-cli: circleci/gcp-cli@2.1.0
 jobs:
   deploy:
     docker:
@@ -22,6 +24,11 @@ jobs:
  
 workflows:
   version: 2
+  install_and_configure_cli:
+    jobs:
+      - gcp-cli/install_and_initialize_cli:
+          context: myContext
+          executor: gcp-cli/default
   deploy_to_gcp:
     jobs:
       - deploy
